--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Domino",
-  "name": "Domino Game by Aleks Shenshin",
+  "name": "Domino",
   "icons": [
     {
       "src": "favicon.ico",
