--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,8 @@
       "react/button-has-type": 0,
       "react/prop-types": 0,
       "no-nested-ternary": 0,
-      "react-hooks/exhaustive-deps": 0
+      "react-hooks/exhaustive-deps": 0,
+      "no-console": 0,
+      "linebreak-style": 0
     }
 }
